Implementado suporte ao canal PICKUP e filtro por canalPedido
